@@ -1,22 +1,22 @@
 package com.example.demo;
 
-import org.apache.commons.lang3.ArrayUtils;
+
 import org.apache.log4j.Logger;
+import org.eclipse.jgit.api.Git;
+import org.eclipse.jgit.api.ListBranchCommand;
+import org.eclipse.jgit.api.errors.GitAPIException;
+import org.eclipse.jgit.lib.Ref;
 
-
-import java.io.BufferedReader;
-import java.io.IOException;
-import java.io.InputStream;
-import java.io.InputStreamReader;
-import java.util.Arrays;
+import java.io.*;
+import java.util.List;
 
 public class ShellCommandUtils {
     private static final org.apache.log4j.Logger logger = Logger.getLogger(ShellCommandUtils.class);
 
 
-    public static void clone(String path,String position){
+    public static void clone(String path, String position) {
         try {
-            String command = "D:/WorkSoft/Git/bin/sh.exe D:/WorkSpace/FlakyDataSet/git-clone.sh"+" "+path+" "+position;
+            String command = "D:/WorkSoft/Git/bin/sh.exe D:/WorkSpace/FlakyDataSet/git-clone.sh" + " " + path + " " + position;
             ProcessBuilder processBuilder = new ProcessBuilder(command.split(" "));
 
             processBuilder.redirectErrorStream(true);
@@ -26,7 +26,7 @@ public class ShellCommandUtils {
             InputStreamReader isr = new InputStreamReader(is);
             BufferedReader br = new BufferedReader(isr);
             String line;
-            while ((line = br.readLine())!=null){
+            while ((line = br.readLine()) != null) {
                 System.out.println(line);
             }
             int exitCode = process.waitFor();
@@ -37,22 +37,49 @@ public class ShellCommandUtils {
             throw new RuntimeException(e);
         }
     }
-    public static void GitPusher(String branchName){
-        String[] cmd = {"D:/WorkSoft/Git/bin/sh.exe","-c","sh D:/WorkSpace/FlakyDataSet/git-push.sh "+branchName};
+
+    //自动push代码
+    public static void GitPusher(String path, String name) throws GitAPIException, IOException {
+        //对待提交数据做出更改
+        File file = new File(path + "/add.txt");
+        if (!file.exists()) {
+            try {
+                file.createNewFile();
+            } catch (IOException e) {
+                throw new RuntimeException(e);
+            }
+        } else {
+            BufferedWriter bf = null;
+            try {
+                bf = new BufferedWriter(new FileWriter(file, true));
+                bf.append("1");
+                bf.close();
+            } catch (IOException e) {
+                throw new RuntimeException(e);
+            }
+        }
+
         try {
-            Process process = Runtime.getRuntime().exec(cmd);
-            BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()));
+            String command = "D:/WorkSoft/Git/bin/sh.exe D:/WorkSpace/FlakyDataSet/git-push.sh" + " " + name;
+            ProcessBuilder processBuilder = new ProcessBuilder(command.split(" "));
+            processBuilder.redirectErrorStream(true);
+
+            Process process = processBuilder.start();
+            InputStream is = process.getInputStream();
+            InputStreamReader isr = new InputStreamReader(is);
+            BufferedReader br = new BufferedReader(isr);
             String line;
-            while((line = reader.readLine())!=null){
+            while ((line = br.readLine()) != null) {
                 System.out.println(line);
             }
-            process.waitFor();
-            System.out.println("Git push completed");
+            int exitCode = process.waitFor();
+            System.out.println(exitCode);
         } catch (IOException e) {
             throw new RuntimeException(e);
         } catch (InterruptedException e) {
             throw new RuntimeException(e);
         }
+
     }
 
 
